<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/headerImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/green"
            android:gravity="center"
            android:padding="15dp"
            android:scaleType="fitCenter"
            android:text="@string/titleAddConn"
            android:textColor="@color/white"
            android:textSize="10pt"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profileLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/headerImage"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:hint="@string/profile">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/urlLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profileLayout"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:hint="@string/url">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textUri"
                android:focusableInTouchMode="true"
                android:maxLines="3"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/urlLayout"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:hint="@string/user">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:focusableInTouchMode="true"
                android:inputType="text"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userLayout"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:hint="@string/password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLines="1"
                android:focusableInTouchMode="true"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnContinue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/passwordLayout"
            android:layout_centerHorizontal="true"
            android:text="@string/btnContinue" />

    </RelativeLayout>
</ScrollView>